# git_repo_scrubber

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/ammender/: ammender.rs  mod.rs
src/extractor/: extractor.rs
src/sequencer/: sequencer.rs
